@@ -28,6 +28,7 @@ Please note, the Opus Primus copyright can be found at the end of this file.
 * Added more BNS Plugin Integration (BPI) adjustments
 * Address both class and id usage for the sidebar search form
 * Adjusted widths of comment form elements
+* Adjusted CSS to better handle large images with captions in large full-width displays
 * Sorted out the adaptive layout for screens less than 480px wide
 
 = JavaScript =
